fix overlap

--- a/menu.css
+++ b/menu.css
@@ -95,6 +95,7 @@ header{
     padding: 0;
     margin: 0;
     background-color: #5C5C99;
+    overflow: hidden;
 }
     .menu-v li{
     	list-style-type: none;
